tests/corpus/snapshots/_serialization_prelude/preserve.snap
---
source: src/tests/snapshot_tests.rs
expression: prelude
---
// same as cbor_event::de::Deserialize but with our DeserializeError
pub trait Deserialize {
    fn deserialize(
        raw: &mut Deserializer,
    ) -> Result<Self, DeserializeError> where Self: Sized;

    // cbor_event's Deserializer owns its buffer, so this copies `data` once (O(n))
    /// Deserialize from this type's CBOR form.
    /// For a type that also has a raw-bytes form (e.g. one implementing `RawBytesEncoding`),
    /// this expects the CBOR byte-string encoding (type/length header plus payload),
    /// where `from_raw_bytes` takes the bare payload.
    fn from_cbor_bytes(data: &[u8]) -> Result<Self, DeserializeError> where Self: Sized {
        let mut raw = Deserializer::from(data.to_vec());
        let value = Self::deserialize(&mut raw)?;
        // Reject leftover bytes after a complete value instead of silently ignoring them: otherwise a
        // truncated/corrupt or accidentally-concatenated buffer would deserialize as Ok.
        // Hand-rolled rather than cbor_event's deserialize_complete(): that helper is bounded to
        // cbor_event's own Deserialize trait and error type, while this trait must surface the
        // annotated DeserializeError.
        if !raw.as_slice().is_empty() {
            return Err(DeserializeFailure::CBOR(cbor_event::Error::TrailingData).into());
        }
        Ok(value)
    }
}

impl<T: cbor_event::de::Deserialize> Deserialize for T {
    fn deserialize(raw: &mut Deserializer) -> Result<T, DeserializeError> {
        T::deserialize(raw).map_err(DeserializeError::from)
    }
}
pub struct CBORReadLen {
    deser_len: cbor_event::LenSz,
    read: u64,
}

impl CBORReadLen {
    pub fn new(len: cbor_event::LenSz) -> Self {
        Self {
            deser_len: len,
            read: 0,
        }
    }

    pub fn read(&self) -> u64 {
        self.read
    }

    // Marks {n} values as being read, and if we go past the available definite length
    // given by the CBOR, we return an error.
    pub fn read_elems(&mut self, count: usize) -> Result<(), DeserializeFailure> {
        match self.deser_len {
            cbor_event::LenSz::Len(n, _) => {
                self.read += count as u64;
                if self.read > n {
                    Err(DeserializeFailure::DefiniteLenMismatch(n, None))
                } else {
                    Ok(())
                }
            },
            cbor_event::LenSz::Indefinite => Ok(()),
        }
    }

    pub fn finish(&self) -> Result<(), DeserializeFailure> {
        match self.deser_len {
            cbor_event::LenSz::Len(n, _) => {
                if self.read == n {
                    Ok(())
                } else {
                    Err(DeserializeFailure::DefiniteLenMismatch(n, Some(self.read)))
                }
            },
            cbor_event::LenSz::Indefinite => Ok(()),
        }
    }
}

// allows a preserve-flavored crate to serve as a --common-import-override target for
// preserve-encodings=false crates: they construct CBORReadLen via From<cbor_event::Len>, so we
// promote the size-less Len to a canonical-sized LenSz
impl From<cbor_event::Len> for CBORReadLen {
    fn from(len: cbor_event::Len) -> Self {
        let len_sz = match len {
            cbor_event::Len::Len(n) => cbor_event::LenSz::Len(n, cbor_event::Sz::canonical(n)),
            cbor_event::Len::Indefinite => cbor_event::LenSz::Indefinite,
        };
        Self::new(len_sz)
    }
}

pub trait DeserializeEmbeddedGroup {
    fn deserialize_as_embedded_group(
        raw: &mut Deserializer,
        read_len: &mut CBORReadLen,
        len: cbor_event::LenSz,
    ) -> Result<Self, DeserializeError> where Self: Sized;
}

#[inline]
pub fn sz_max(sz: cbor_event::Sz) -> u64 {
    match sz {
        cbor_event::Sz::Inline => 23u64,
        cbor_event::Sz::One => u8::MAX as u64,
        cbor_event::Sz::Two => u16::MAX as u64,
        cbor_event::Sz::Four => u32::MAX as u64,
        cbor_event::Sz::Eight => u64::MAX,
    }
}

#[derive(Debug, PartialEq, Eq, Copy, Clone, Default)]
pub enum LenEncoding {
    #[default]
    Canonical,
    Definite(cbor_event::Sz),
    Indefinite,
}

impl From<cbor_event::LenSz> for LenEncoding {
    fn from(len_sz: cbor_event::LenSz) -> Self {
        match len_sz {
            cbor_event::LenSz::Len(len, sz) => if cbor_event::Sz::canonical(len) == sz {
                Self::Canonical
            } else {
                Self::Definite(sz)
            },
            cbor_event::LenSz::Indefinite => Self::Indefinite,
        }
    }
}

/// Tracks whether a value that MAY carry a CBOR tag was tagged on the wire, so a roundtrip
/// re-emits the arm it was read from. Used for the transparent tag-set idiom
/// (`x = #6.N([* a]) / [* a]`), which cddl-codegen collapses into one transparent collection whose
/// tag becomes an encoding detail rather than a type distinction.
///
/// `Tagged(Option<Sz>)` = present on the wire, carrying the tag head's size hint (`None` = emit the
/// fit-minimal size). `Untagged` = absent. This is a strict superset of the `Option<Sz>` an
/// always-written tag uses: `None`-as-untagged would conflate "untagged" with "tagged, default
/// size", which is exactly the ambiguity this avoids.
///
/// `Default` is `Tagged(None)`: a newly constructed value serializes tagged with the fit-minimal
/// size (for tag 258 that is `Sz::Two`)
#[derive(Debug, PartialEq, Eq, Copy, Clone)]
pub enum TagPresenceEncoding {
    Tagged(Option<cbor_event::Sz>),
    Untagged,
}

impl Default for TagPresenceEncoding {
    fn default() -> Self {
        Self::Tagged(None)
    }
}

#[derive(Debug, PartialEq, Eq, Clone, Default)]
pub enum StringEncoding {
    #[default]
    Canonical,
    Indefinite(Vec<(u64, cbor_event::Sz)>),
    Definite(cbor_event::Sz),
}

impl From<cbor_event::StringLenSz> for StringEncoding {
    fn from(len_sz: cbor_event::StringLenSz) -> Self {
        match len_sz {
            cbor_event::StringLenSz::Len(sz) => Self::Definite(sz),
            cbor_event::StringLenSz::Indefinite(lens) => Self::Indefinite(lens),
        }
    }
}

/// Length-first-then-bytewise comparison of two encoded CBOR map keys — the RFC 7049 §3.9
/// "canonical CBOR" key ordering (NOT pure RFC 8949 §4.2.1 bytewise). ONE shared runtime helper so
/// every runtime canonical key sort agrees by construction: the `@duplicates preserve` pair-map
/// sort, `AnyCbor`'s own canonical map serialization, and generated open struct-maps' runtime
/// canonical key merge all call it, and it is the runtime twin of the
/// codegen-time `RustRecord::canonical_ordering` (pinned to agree by a divergence test vector, e.g.
/// key `24` = `0x1818` vs `10` = `0x0a`, where the shorter encoding is bytewise-greater).
pub fn cbor_canonical_key_cmp(lhs: &[u8], rhs: &[u8]) -> core::cmp::Ordering {
    match lhs.len().cmp(&rhs.len()) {
        core::cmp::Ordering::Equal => lhs.cmp(rhs),
        diff_ord => diff_ord,
    }
}
#[inline]
pub fn fit_sz(len: u64, sz: Option<cbor_event::Sz>) -> cbor_event::Sz {
    match sz {
        Some(sz) => if len <= sz_max(sz) {
            sz
        } else {
            cbor_event::Sz::canonical(len)
        },
        None => cbor_event::Sz::canonical(len),
    }
}

/// The float twin of `fit_sz` + the write it feeds, as ONE function (the force-canonical flavor of
/// this file has a canonical NaN rule that couples the head width to the written VALUE, so both
/// flavors keep the choice in one place).
///
/// A recorded wire width is honored whenever it still represents the value exactly. Two things differ
/// from the integer widths. Floats have only the 2/4/8-byte heads (RFC 8949 §3.3), and
/// `write_float_sz` ERRORS (`InvalidLenPassed`) on a width that would round the value — where an
/// integer encodes at any width at or above its own. So the fit test is against `smallest_float_sz`
/// (the narrowest LOSSLESS width for this value, NaN payload included) rather than a value range, and
/// a recorded width below it widens rather than failing serialization. That widening is reachable
/// whenever a decoded value is REPLACED: `1.5` read as `f9` keeps `Sz::Two`, and assigning `1.1` to
/// that field would otherwise error at serialize time. The float-invalid `Sz::Inline`/`Sz::One` —
/// which no `float_sz()` read produces, but a hand-built encoding struct can hold — fall out of the
/// same comparison. `sz_max` is reused purely as the width ORDERING (it is monotonic in head size);
/// its integer magnitude carries no meaning for a float.
pub fn write_float(
    serializer: &mut Serializer,
    value: f64,
    sz: Option<cbor_event::Sz>,
) -> cbor_event::Result<&mut Serializer> {
    let smallest = cbor_event::se::smallest_float_sz(value);
    let width = match sz {
        Some(sz) if sz_max(sz) >= sz_max(smallest) => sz,
        _ => smallest,
    };
    serializer.write_float_sz(value, width)
}

impl LenEncoding {
    pub fn to_len_sz(&self, len: u64) -> cbor_event::LenSz {
        match self {
            Self::Canonical => cbor_event::LenSz::Len(len, cbor_event::Sz::canonical(len)),
            Self::Definite(sz) => if sz_max(*sz) >= len {
                cbor_event::LenSz::Len(len, *sz)
            } else {
                cbor_event::LenSz::Len(len, cbor_event::Sz::canonical(len))
            },
            Self::Indefinite => cbor_event::LenSz::Indefinite,
        }
    }

    pub fn end<'a>(&self, serializer: &'a mut Serializer) -> cbor_event::Result<&'a mut Serializer> {
        if *self == Self::Indefinite {
            serializer.write_special(cbor_event::Special::Break)?;
        }
        Ok(serializer)
    }
}

impl StringEncoding {
    pub fn to_str_len_sz(&self, len: u64) -> cbor_event::StringLenSz {
        match self {
            Self::Canonical => cbor_event::StringLenSz::Len(cbor_event::Sz::canonical(len)),
            Self::Definite(sz) => if sz_max(*sz) >= len {
                cbor_event::StringLenSz::Len(*sz)
            } else {
                cbor_event::StringLenSz::Len(cbor_event::Sz::canonical(len))
            },
            Self::Indefinite(lens) => cbor_event::StringLenSz::Indefinite(lens.clone()),
        }
    }
}
pub trait SerializeEmbeddedGroup {
    fn serialize_as_embedded_group<'a>(
        &self,
        serializer: &'a mut Serializer,
    ) -> cbor_event::Result<&'a mut Serializer>;
}

pub trait ToCBORBytes {
    fn to_cbor_bytes(&self) -> Vec<u8>;
}

impl<T: cbor_event::se::Serialize> ToCBORBytes for T {
    fn to_cbor_bytes(&self) -> Vec<u8> {
        let mut buf = Serializer::new_vec();
        self.serialize(&mut buf).unwrap();
        buf.finalize()
    }
}
